Center align bug fixing and resizing

--- a/src/index.css
+++ b/src/index.css
@@ -3,16 +3,13 @@
   src: url("./Fonts/OpenMine.ttf");
 }
 
-.App {
-  overflow-x: unset;
-}
-
 body {
   margin: 0;
   font-family: "freePixel";
   overflow-x: hidden;
   background-image: url("./Images/Sky.png");
 }
+
 @media only screen and (max-width: 1200px) {
   body {
     font-size: 0.7em;
@@ -27,19 +24,19 @@ body {
 
 .mountainWrapper1 {
   position: absolute;
-  top: 650em;
+  top: 600em;
 }
 .mountainWrapper2 {
   position: absolute;
-  top: 650em;
+  top: 600em;
 }
 .mountainWrapper3 {
   position: absolute;
-  top: 650em;
+  top: 600em;
 }
 .mountainWrapper4 {
   position: absolute;
-  top: 650em;
+  top: 600em;
 }
 
 .mountainsImages {
